# bevy_game

./: Cargo.toml
assets/level/: level_0.ldtk
assets/level/level_0/simplified/Level_0/: data.json
assets/map/: map1.txt
assets/sprites/: icons.aseprite  sword_anim.aseprite
assets/sprites/cursor/: Sprite-0001.aseprite  Sprite-0002.aseprite  Sprite-0003.aseprite  Sprite-0004.aseprite  Sprite-0005.aseprite
assets/spritesheets/: sprite_atlas.json  sprites.json
src/: chest.rs  cursor.rs  debug.rs  enemy.rs  game.rs  healthbar.rs  input.rs  inventory.rs  level.rs  lib.rs  magic.rs  main.rs  mainmenu.rs  melee.rs  network.rs  player.rs  splashscreen.rs  spritesheet.rs  tilemap.rs  torch_fragment.wgsl  torch_vertex.wgsl
