[package]
name = "bevy_game_client"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip =  "symbols"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bevy = { version="0.13.2" }
bevy-inspector-egui = "0.24.0"
bevy_ecs = "0.13.2"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" }
bevy_rapier2d = {version="0.26.0", features = [ "simd-stable", "debug-render-2d" ]}
# bevy_asset_loader = "0.20.1"
#bevy_ecs_tilemap = "0.12.0"
#bevy_asset = "0.13.2"
#bevy_ecs_ldtk = { git="https://github.com/Trouv/bevy_ecs_ldtk.git", branch="main"} 
#bevy_egui = "0.27.0"
bevy_renet = {version = "0.0.11", features = ["serde"]}
bincode = "1.3.3"
fastrand = "2.0.1"
rand = "0.8.5"
renet_visualizer = {version = "0.0.7", features = ["bevy"]}
serde = { version="1.0.200", features=["derive"] }
serde_json = "1.0.116"

[patch.crates-io]
# Patch unstable version to resolve conflicting dependencies from bevy_ecs_ldtk
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
